prediction with endpoint as well as roc curves

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -347,6 +347,8 @@
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader, DistributedSampler\n",
     "from torch.nn.parallel import DistributedDataParallel\n",
+    "from sklearn.metrics import confusion_matrix, plot_roc_curve, plot_precision_recall_curve\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "class CNNModel(nn.Module):\n",
     "    def __init__(self):\n",
@@ -431,8 +433,11 @@
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=args.learning_rate, momentum=args.momentum)\n",
     "\n",
+    "    # Lists to store true labels and predictions\n",
+    "    all_labels = []\n",
+    "    all_predictions = []\n",
+    "\n",
     "    # Training loop\n",
-    "    loss = None\n",
     "    for epoch in range(args.num_epochs):\n",
     "        model.train()\n",
     "        for images, labels in train_loader:\n",
@@ -442,9 +447,35 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "\n",
+    "            # Collect true labels and predictions\n",
+    "            all_labels.extend(labels.cpu().numpy())\n",
+    "            all_predictions.extend(torch.argmax(outputs, axis=1).cpu().numpy())\n",
+    "\n",
     "    ###################\n",
     "    #</train the model>\n",
     "    ###################\n",
+    "\n",
+    "    # Generate confusion matrix\n",
+    "    confusion = confusion_matrix(all_labels, all_predictions)\n",
+    "    plt.figure()\n",
+    "    plt.imshow(confusion, interpolation='nearest', cmap=plt.cm.Blues)\n",
+    "    plt.colorbar()\n",
+    "    plt.xlabel('True label')\n",
+    "    plt.ylabel('Predicted label')\n",
+    "    plt.title('Confusion matrix')\n",
+    "    plt.savefig(\"confusion_matrix.png\")\n",
+    "\n",
+    "    # Generate ROC curve\n",
+    "    fig_roc, ax_roc = plt.subplots()\n",
+    "    plot_roc_curve(model, train_dataset, ax=ax_roc)\n",
+    "    plt.title('Training ROC Curve')\n",
+    "    plt.savefig(\"training_roc_curve.png\")\n",
+    "\n",
+    "    # Generate Precision-Recall curve\n",
+    "    fig_pr, ax_pr = plt.subplots()\n",
+    "    plot_precision_recall_curve(model, train_dataset, ax=ax_pr)\n",
+    "    plt.title('Training Precision-Recall Curve')\n",
+    "    plt.savefig(\"training_precision_recall_curve.png\")\n",
     "\n",
     "    ##########################\n",
     "    #<save and register model>\n",
@@ -760,7 +791,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## testing the endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"image_id\": 1, \"predicted_label\": \"waffles\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test the blue deployment with some sample data\n",
+    "ml_client.online_endpoints.invoke(\n",
+    "    endpoint_name=online_endpoint_name,\n",
+    "    request_file=\"/Users/harinikarthik/Desktop/Waterloo/Leetcode/Smart-Fridge/Dataset/Test/apple_pie/134.jpg\",\n",
+    "    deployment_name=\"blue\",\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
