made some changes to the script and deployed to endpoint again

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -335,20 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile {train_src_dir}/main.py\n",
-    "import os\n",
-    "import argparse\n",
-    "import pandas as pd\n",
-    "import mlflow\n",
-    "import mlflow.pytorch\n",
-    "import torch\n",
+    "%%writefile {train_src_dir}/model.py\n",
     "import torch.nn as nn\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
-    "from torch.utils.data import DataLoader, DistributedSampler\n",
-    "from torch.nn.parallel import DistributedDataParallel\n",
-    "from sklearn.metrics import confusion_matrix, plot_roc_curve, plot_precision_recall_curve\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "class CNNModel(nn.Module):\n",
     "    def __init__(self):\n",
@@ -371,7 +359,27 @@
     "        x = self.conv_layers(x)\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.fc_layers(x)\n",
-    "        return x\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile {train_src_dir}/train.py\n",
+    "import os\n",
+    "import argparse\n",
+    "import pandas as pd\n",
+    "import mlflow\n",
+    "import mlflow.pytorch\n",
+    "import torch\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import DataLoader, DistributedSampler\n",
+    "from torch.nn.parallel import DistributedDataParallel\n",
+    "from model import CNNModel  # Import the CNNModel from the model module\n",
     "\n",
     "def main():\n",
     "    \"\"\"Main function of the script.\"\"\"\n",
@@ -455,52 +463,51 @@
     "    #</train the model>\n",
     "    ###################\n",
     "\n",
-    "    # Generate confusion matrix\n",
-    "    confusion = confusion_matrix(all_labels, all_predictions)\n",
-    "    plt.figure()\n",
-    "    plt.imshow(confusion, interpolation='nearest', cmap=plt.cm.Blues)\n",
-    "    plt.colorbar()\n",
-    "    plt.xlabel('True label')\n",
-    "    plt.ylabel('Predicted label')\n",
-    "    plt.title('Confusion matrix')\n",
-    "    plt.savefig(\"confusion_matrix.png\")\n",
-    "\n",
-    "    # Generate ROC curve\n",
-    "    fig_roc, ax_roc = plt.subplots()\n",
-    "    plot_roc_curve(model, train_dataset, ax=ax_roc)\n",
-    "    plt.title('Training ROC Curve')\n",
-    "    plt.savefig(\"training_roc_curve.png\")\n",
-    "\n",
-    "    # Generate Precision-Recall curve\n",
-    "    fig_pr, ax_pr = plt.subplots()\n",
-    "    plot_precision_recall_curve(model, train_dataset, ax=ax_pr)\n",
-    "    plt.title('Training Precision-Recall Curve')\n",
-    "    plt.savefig(\"training_precision_recall_curve.png\")\n",
-    "\n",
-    "    ##########################\n",
-    "    #<save and register model>\n",
-    "    ##########################\n",
     "    # Save the trained model\n",
     "    torch.save(model.state_dict(), \"trained_model.pth\")\n",
     "\n",
-    "    # Registering the model to the workspace\n",
-    "    print(\"Registering the model via MLFlow\")\n",
-    "    mlflow.pytorch.log_model(model, args.register_model_as)\n",
-    "\n",
-    "    # Saving the model to a file\n",
-    "    mlflow.pytorch.save_model(model, args.register_model_as)\n",
-    "    ###########################\n",
-    "    #</save and register model>\n",
-    "    ###########################\n",
-    "    \n",
-    "    # Log training loss\n",
-    "    mlflow.log_metric(\"training_loss\", loss.item())\n",
-    "    \n",
     "    # Stop Logging\n",
     "    mlflow.end_run()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile {train_src_dir}/inference_script.py\n",
+    "import torch\n",
+    "import torchvision.transforms as transforms\n",
+    "from PIL import Image\n",
+    "from model import CNNModel  # Import the CNNModel from the model module\n",
+    "\n",
+    "class inference_script_class:\n",
+    "    def run_inference(image_path):\n",
+    "        # Load the trained model\n",
+    "        model = CNNModel()\n",
+    "        model.load_state_dict(torch.load(\"trained_model.pth\"))\n",
+    "        model.eval()\n",
+    "\n",
+    "        # Define transformations for input images\n",
+    "        transform = transforms.Compose([\n",
+    "            transforms.Resize((512, 512)),\n",
+    "            transforms.ToTensor()\n",
+    "        ])\n",
+    "\n",
+    "        # Load and preprocess the input image\n",
+    "        image = Image.open(image_path)\n",
+    "        image = transform(image).unsqueeze(0)  # Add batch dimension\n",
+    "\n",
+    "        # Perform inference\n",
+    "        with torch.no_grad():\n",
+    "            output = model(image)\n",
+    "            predicted_label = torch.argmax(output, dim=1).item()\n",
+    "\n",
+    "        return predicted_label\n"
    ]
   },
   {
@@ -809,12 +816,22 @@
     }
    ],
    "source": [
+    "from inference_script import inference_script_class\n",
+    "\n",
+    "image_path = \"/Users/harinikarthik/Desktop/Waterloo/Leetcode/Smart-Fridge/Dataset/Test/apple_pie/134.jpg\"\n",
+    "predicted_label = run_inference(image_path)\n",
+    "\n",
     "# test the blue deployment with some sample data\n",
     "ml_client.online_endpoints.invoke(\n",
     "    endpoint_name=online_endpoint_name,\n",
-    "    request_file=\"/Users/harinikarthik/Desktop/Waterloo/Leetcode/Smart-Fridge/Dataset/Test/apple_pie/134.jpg\",\n",
-    "    deployment_name=\"blue\",\n",
-    ")"
+    "    request_file=image_path,\n",
+    "    deployment_name=\"blue_green\",\n",
+    ")\n",
+    "# Extract the predicted label from the response\n",
+    "predicted_label_from_endpoint = response.get(\"result\")\n",
+    "\n",
+    "\n",
+    "print(f\"{{\\\"image_id\\\": 1, \\\"predicted_label\\\": \\\"{predicted_label_from_endpoint}\\\"}}\")\n"
    ]
   }
  ],
