distributed gpu work

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -335,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile {train_src_dir}/model.py\n",
+    "%%writefile {train_src_dir}/Model.py\n",
     "import torch.nn as nn\n",
     "\n",
     "class CNNModel(nn.Module):\n",
@@ -368,7 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile {train_src_dir}/train.py\n",
+    "%%writefile {train_src_dir}/Train.py\n",
     "import os\n",
     "import argparse\n",
     "import pandas as pd\n",
@@ -379,7 +379,7 @@
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader, DistributedSampler\n",
     "from torch.nn.parallel import DistributedDataParallel\n",
-    "from model import CNNModel  # Import the CNNModel from the model module\n",
+    "from Model import CNNModel  # Import the CNNModel from the model module\n",
     "\n",
     "def main():\n",
     "    \"\"\"Main function of the script.\"\"\"\n",
@@ -479,11 +479,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile {train_src_dir}/inference_script.py\n",
+    "%%writefile {train_src_dir}/Inference.py\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
     "from PIL import Image\n",
-    "from model import CNNModel  # Import the CNNModel from the model module\n",
+    "from Model import CNNModel  # Import the CNNModel from the model module\n",
     "\n",
     "class inference_script_class:\n",
     "    def run_inference(image_path):\n",
@@ -816,7 +816,7 @@
     }
    ],
    "source": [
-    "from inference_script import inference_script_class\n",
+    "from Inference import inference_script_class\n",
     "\n",
     "image_path = \"/Users/harinikarthik/Desktop/Waterloo/Leetcode/Smart-Fridge/Dataset/Test/apple_pie/134.jpg\"\n",
     "predicted_label = run_inference(image_path)\n",
