important files for the model

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -822,13 +822,13 @@
     "predicted_label = run_inference(image_path)\n",
     "\n",
     "# test the blue deployment with some sample data\n",
-    "ml_client.online_endpoints.invoke(\n",
+    "response = ml_client.online_endpoints.invoke(\n",
     "    endpoint_name=online_endpoint_name,\n",
     "    request_file=image_path,\n",
     "    deployment_name=\"blue_green\",\n",
     ")\n",
     "# Extract the predicted label from the response\n",
-    "predicted_label_from_endpoint = response.get(\"result\")\n",
+    "predicted_label_from_endpoint = response.json().get(\"result\")\n",
     "\n",
     "\n",
     "print(f\"{{\\\"image_id\\\": 1, \\\"predicted_label\\\": \\\"{predicted_label_from_endpoint}\\\"}}\")\n"
